# BayesGPc

./: .gitignore  .gitmodules  BO_test_analyses.ipynb  BO_test_analyses.py  BayesInterface.i  BayesTestFunction.cpp  BayesTestFunction.h  BayesianSearch.py  BayesianSearchFun.py  CBayesianSearch.cpp  CBayesianSearch.h  CClctrl.cpp  CDataModel.h  CDist.cpp  CDist.h  CGp.cpp  CGp.h  CKern.cpp  CKern.h  CMakeLists.txt  CMatrix.cpp  CMatrix.h  CMltools.cpp  CMltools.h  CNdlInterfaces.h  CNoise.cpp  CNoise.h  COptimisable.cpp  COptimisable.h  CSearchComparison.cpp  CSearchComparison.h  CTransform.h  GridSearch.cpp  GridSearch.h  Logger.cpp  Logger.h  ReferenceBayesianSearch.py  bayesPlotUtil.cpp  bayesPlotUtil.h  gp.cpp  (+36 more)
